--- a/Lab400.md
+++ b/Lab400.md
@@ -10,17 +10,17 @@ Similar to [lab 300](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab300a
 
 You can manage kubernetes yourself on OCI, use the [pre-built kubernetes installer](https://github.com/oracle/terraform-kubernetes-installer), or use the enterprise class managed service Oracle Kubernetes Engine, OKE.
 
-OKE enables quick deployment of containers, combines open Kubernetes, with the control, security, IAM, and predictable performance of OCI.
+OKE enables quick deployment of containers, combines open Kubernetes, with the control, security, IAM, and predictable performance of OCI. OKE ensures highly available master nodes across a region's availability domains. The OCI Registry, OCIR, ensures in-flight and at rest data encryption. Begin by [creating a cluster on OKE](https://www.oracle.com/webfolder/technetwork/tutorials/obe/oci/oke-full/index.html). 
 
-[Best place to start with OKE](https://oracle.github.io/learning-library/workshops/container-native-development/)
+[Continuing with OKE](https://oracle.github.io/learning-library/workshops/container-native-development/)
+
+[MuShop - A cloud-native reference app for Oracle Cloud](https://blogs.oracle.com/developers/mushop-a-cloud-native-reference-app-for-oracle-cloud)
 
 [OKE API](https://docs.cloud.oracle.com/en-us/iaas/api/#/en/containerengine/20180222/)
 
 [kubectl cheat sheet](https://kubernetes.io/docs/reference/kubectl/cheatsheet/)
 
 [What is the point of a service provider's kubernetes engine over open source management?](https://cloud.google.com/kubernetes-engine/kubernetes-comic)
-
-[MuShop - A cloud-native reference app for Oracle Cloud](https://blogs.oracle.com/developers/mushop-a-cloud-native-reference-app-for-oracle-cloud)
 
 [Running Jenkins on OKE](https://blogs.oracle.com/cloud-infrastructure/cicd-on-steroids:-announcing-container-engine-for-kubernetes-as-a-jenkins-x-provider)
 
