--- a/Lab400.md
+++ b/Lab400.md
@@ -10,7 +10,9 @@ Similar to [lab 300](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab300a
 
 You can manage kubernetes yourself on OCI, use the [pre-built kubernetes installer](https://github.com/oracle/terraform-kubernetes-installer), or use the enterprise class managed service Oracle Kubernetes Engine, OKE.
 
-OKE enables quick deployment of containers, combines open Kubernetes, with the control, security, [IAM](https://docs.cloud.oracle.com/en-us/iaas/Content/ContEng/Concepts/contengpolicyconfig.htm), and [predictable performance of OCI](https://www.oracle.com/cloud/iaas/sla.html). OKE ensures highly available master nodes across a region's availability domains. The OCI Registry, OCIR, ensures in-flight and at rest data encryption. The best part - you're only paying for the OCI resources you use in your cluster, the VMs, storage, load balancers, etc; the registry and OKE management are provided at no extra cost. Begin by [creating a cluster on OKE](https://www.oracle.com/webfolder/technetwork/tutorials/obe/oci/oke-full/index.html). 
+OKE enables quick deployment of containers, combines open Kubernetes, with the control, security, [IAM](https://docs.cloud.oracle.com/en-us/iaas/Content/ContEng/Concepts/contengpolicyconfig.htm), and [predictable performance of OCI (Oracle offers the only SLA to include performance](https://www.oracle.com/cloud/iaas/sla.html). OKE ensures highly available master nodes across a region's availability domains. The OCI Registry, OCIR, ensures in-flight and at rest data encryption. The best part - you're only paying for the OCI resources you use in your cluster, the VMs, storage, load balancers, etc; the registry and OKE management are provided at no extra cost. 
+
+Begin by [creating a cluster on OKE](https://www.oracle.com/webfolder/technetwork/tutorials/obe/oci/oke-full/index.html). 
 
 [Continuing with OKE](https://oracle.github.io/learning-library/workshops/container-native-development/)
 
