--- a/Lab400.md
+++ b/Lab400.md
@@ -10,7 +10,9 @@ Similar to [lab 300](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab300a
 
 You can manage kubernetes yourself on OCI, use the [pre-built kubernetes installer](https://github.com/oracle/terraform-kubernetes-installer), or use the enterprise class managed service Oracle Kubernetes Engine, OKE.
 
-OKE enables quick deployment of containers, combines open Kubernetes, with the control, security, [IAM](https://docs.cloud.oracle.com/en-us/iaas/Content/ContEng/Concepts/contengpolicyconfig.htm), and [predictable performance of OCI (Oracle offers the only SLA to include performance](https://www.oracle.com/cloud/iaas/sla.html). OKE ensures highly available master nodes across a region's availability domains. The OCI Registry, OCIR, ensures in-flight and at rest data encryption. The best part - you're only paying for the OCI resources you use in your cluster, the VMs, storage, load balancers, etc; the registry and OKE management are provided at no extra cost. 
+OKE enables quick deployment of containers, combines open Kubernetes, with the control, security, [IAM](https://docs.cloud.oracle.com/en-us/iaas/Content/ContEng/Concepts/contengpolicyconfig.htm), and [predictable performance of OCI (Oracle offers the only SLA to include performance)](https://www.oracle.com/cloud/iaas/sla.html). OKE ensures highly available master nodes across a region's availability domains. The OCI Registry, OCIR, ensures in-flight and at rest data encryption. The best part - you're only paying for the OCI resources you use in your cluster, the VMs, storage, load balancers, etc; the registry and OKE management are provided at no extra cost. 
+
+## Hands on
 
 Begin by [creating a cluster on OKE](https://www.oracle.com/webfolder/technetwork/tutorials/obe/oci/oke-full/index.html). 
 
@@ -18,20 +20,21 @@ Begin by [creating a cluster on OKE](https://www.oracle.com/webfolder/technetwor
 
 [MuShop - A cloud-native reference app for Oracle Cloud](https://blogs.oracle.com/developers/mushop-a-cloud-native-reference-app-for-oracle-cloud)
 
+[CI/CD with containers](https://developer.oracle.com/a/devo/docs/cicd-with-containers.pdf)
+
+[Running Jenkins on OKE](https://blogs.oracle.com/cloud-infrastructure/cicd-on-steroids:-announcing-container-engine-for-kubernetes-as-a-jenkins-x-provider)
+
+[More on OKE](https://medium.com/@prasannashasthri/build-and-deploy-docker-images-to-oracle-cloud-infrastructure-container-engine-for-kubernetes-oke-9958fe1d132)
+
+## Resources
+
 [OKE API](https://docs.cloud.oracle.com/en-us/iaas/api/#/en/containerengine/20180222/)
 
 [kubectl cheat sheet](https://kubernetes.io/docs/reference/kubectl/cheatsheet/)
 
 [What is the point of a service provider's kubernetes engine over open source management?](https://cloud.google.com/kubernetes-engine/kubernetes-comic)
 
-[Running Jenkins on OKE](https://blogs.oracle.com/cloud-infrastructure/cicd-on-steroids:-announcing-container-engine-for-kubernetes-as-a-jenkins-x-provider)
-
 [OKE Product page](https://www.oracle.com/cloud/compute/container-engine-kubernetes.html)
-
-[CI/CD with containers](https://developer.oracle.com/a/devo/docs/cicd-with-containers.pdf)
-
-[More on OKE](https://medium.com/@prasannashasthri/build-and-deploy-docker-images-to-oracle-cloud-infrastructure-container-engine-for-kubernetes-oke-9958fe1d132)
-
 
 ## Videos
 
