--- a/Lab100.md
+++ b/Lab100.md
@@ -26,7 +26,7 @@ Give your topic a name and description. Optionally, you can tag the topic - if t
 
 ![](screenshots/5.png) 
 
-After creating a topi you need to create a subscription, accessed from the same location on the menu. 
+After creating a topic you need to create a subscription, accessed from the same location on the menu. 
 
 ![](screenshots/6.png) 
 
