--- a/Lab301.md
+++ b/Lab301.md
@@ -163,6 +163,8 @@ An alternative to the architecture of this lab would be [directly invoking the A
 
 This repo can elaborate on [deploying a flask api on API Gateway](https://github.com/stretchcloud/OCI-APIGW-Demo-API).
 
+You can also put an [OCI Load Balancer in front of your API Gateway](https://redthunder.blog/2018/03/14/teaching-how-to-use-oracle-load-balancer-as-a-service-lbaas-to-front-end-your-api-gateways/#more-8950).
+
 If you have hundreds of APIs, don't create all of them via the console - [use terraform](https://www.terraform.io/docs/providers/oci/r/apigateway_gateway.html).
 
 Proceed to my [next lab to see how you can call a serverless function](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab302.md) via API Gateway.
